<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_grp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_gravity="center" />
            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:scaleType="fitStart"
                android:src="@mipmap/logo_secondary" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <!--<TextView
            android:id="@+id/labelRegisterPeternakan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dip"
            android:layout_gravity="center"
            android:textSize="16dip"
            android:text="@string/labelregclient"
            android:textStyle="bold"/>-->

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|end"
            android:layout_marginBottom="20dp"
            android:text="@string/registerpeternakan"/>-->
        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/registeroutlet"
            android:layout_marginRight="5dp"
            android:textSize="21sp"/>
        <!--<me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registeroutlet"
            android:layout_marginBottom="20dp"
            android:textSize="21sp"/>-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--android:theme="@style/TextLabel">-->

            <EditText
                android:id="@+id/input_outlet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_outlet"
                android:maxLength="30"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--android:theme="@style/TextLabel">-->

            <EditText
                android:id="@+id/input_addr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_addr"
                android:maxLength="30"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--android:theme="@style/TextLabel">-->

            <EditText
                android:id="@+id/input_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_city"
                android:maxLength="30"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="1">

            <Button
                android:id="@+id/btnLinkCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/btn_link_cancel"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5"/>

            <Button android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_confirm"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5" />

        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>