<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_grp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:layout_gravity="center" />
            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:scaleType="fitStart"
                android:src="@mipmap/logo_secondary" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <!--<TextView
            android:id="@+id/labelDisclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dip"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:text="@string/labelsyarat_ketentuan"
            android:textStyle="bold"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--<me.biubiubiu.justifytext.library.JustifyTextView-->
            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/labeldisclaimer"
                android:maxLines = "20"
                android:scrollbars="vertical"
                android:textSize="14sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnLinkToPrivacy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_gravity="left"
            android:gravity="left"
            android:text="@string/btn_link_to_privacy"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp"
            android:layout_marginTop="10dp" />

        <CheckBox
            android:id="@+id/CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_marginBottom="10dp"
            android:text="@string/termcondition"
            android:checked="false" />

        <Button android:id="@+id/btn_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_continue"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
</ScrollView>